--- a/main.css
+++ b/main.css
@@ -1,3 +1,35 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Mike Fitch, Horrible Cop</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Mike Fitch!</h1>
+				<p>I like to make words come to life. REad more about out my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:nyumikefitch1971@gmail.com">email</a></li>
+        		<li><a href="https://github.com/mikefitch">github.com/mikefitch</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
+Visit http://username.github.io to see your styled website. It should look like the page at http://hank
+
 body {
 
     margin: 60px auto;
