--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mike Fitch, Horrible Cop</title>
+		<title>Mike Fitch </title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
