--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 		<title>Mike Fitch </title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="[copied path will go here]">
 	</head>
 	<body>
 		<nav>
